# japomoc

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  test.cpp
resources/images/tiny-16-basic/: LICENSE  basictiles.xml  boy.xml
resources/levels/: test_map.xml
src/: AnimatedCharacter.cpp  AnimatedCharacter.h  ComponentMenu.cpp  ComponentMenu.h  ComponentWorld.cpp  ComponentWorld.h  Game.cpp  Game.h  GameComponent.cpp  GameComponent.h  GameManager.cpp  GameManager.h  Menu.cpp  Menu.h  TileMap.cpp  TileMap.h  World.cpp  World.h  main.cpp  test.cpp  tinyxml2.cpp  tinyxml2.h
